public enum GameState {
  RUNNING,
  WON,
  LOST
}


