' Generated by UML Generator
' Encoded: nLTVRzis47_tfo3G5nc9Wgx3NepEQE9bGu2iCPoy5SL0IOpCHI85ahAJjSrdtzrHVoWvZjCMMnyIaxpZtV7kVdUdTzPnu-gocDWxgIfkUCdIWbjxwfoHIUt4HQhLjVn7iDUJjSm4IwL92p6P41TRhBMsKkMdgTE6VPemTbJgsef58TExw7x6f7B7xA7vjJDsxNWkfZEsqJ93xee39Sfdx0_3gxLCxPDSJb-3EIgFfaZ3rUHBQmBnakh7tCWC9T6bnq9QTtMxBFY3C23p4hPloSuvKbDH55SROO3Sq1PmGgIAhbmeO9PQpTXLXR-y26_NnWZbGBSJe96NWfP8IWHtCtO6_s4NnsW-cHXDSScpp5iKUIqpHaAVzmYvz5AdCxRKGEoPuypmxLyMub9n9OeNtZhAXLiKWfiLpsHjerkZond3vuFp8TGKhUd8Aq5SHJQAR2kwYycVUYDMN6MwB1vyLgIOAEAzk7TWKLHfQsLIe7Ksr7FCqB7aaSOnnqoxjV17mo1ElSc7qkDCcioRy0botSdq2qkaIT12IyQpNzdFNQIGEvAAlEOT8ksPXdWcMeF75CRmbHLkgOk7A7Wso17cbgU2dWusG3Ba__dJ1uenupmCgbgbwmiLbQ9CCCEMTM43D7dwLUtsCe2Nxfm60Ey45dm13mG7_nYi8xJz6n6-rhi10gZ4bfOVthp-Y7zTFF420IzETN6ZBta2A85bcxRfcXka5aYuqGlTKF5yIapFGNAfxIwuqB9J1v9MUXkbZJTCgx2h9Hsknloe-WKNI6rKzVft6G7cNuLmUcPJ4uUlRRmzo5PTOAOkyET9_5-AM_V3iCyJ2nXCdMzch6zFZmc7Z0rifsGQxOiM_hZ9fAtw9e70pxMY9f04XG7tPLTJ24IrKVqEQQ0Yh0vjahuYwqPLHuKsZgiGqli2DdqoHVkCtAbNm4xoyA0t_mZOm0AEMHGQ4m8OwWIO7bLhS6ARgPKmARH20F6UNW2MaUjZNFaks9NY4e-uoMqRl0yV0tscLhibQC7LXbiVJElLKWdfCEyPeaDk6JOqWR61_Vb63D3iSMw4jOUOLW8SUP3h7ElrGQPxwVRnT7uuLRAaO7M5FwPXJi08L6Y00HpmVfdqoxHVPbob_NH4VM3UrDDJO_W37Szz1INd3hGsFdw-tHmTQZT7E-q6b4crn2IBi2RSo59uauEAJJcuq6LL2ChO7KO4tg11abfVaRufaHUDc_li1R0CveWtGGwwRnaZWebs9NWcp4YXWKC_J5RShLlCJ5i4T19-rmQYT7wV2ceANiheq0TlV5X2fZUO8j4lu872pMjquytQw2s7qZxjBVbDvwCtP3eVEEsdpcd0-tspLpU7VzTqyZVVy1E-TIVxnvG-9t3-e5BKlQ_hhpXO_jAqbovl7y55RLDeKWL4H5JlsqIKQjKm7RFHeFtrquY6Z9RAXfD2KFCBQD9NjmWZRgH567L5lvbzU0B1silGvonKF_XSKlbxiMsxoFyz8mu_HazEFi-3BxCnSTvWndy-nl7SVpVwhOvZFpC4Uve70kvESdz67ts3RnyoOj3qH-HvesVdcDJHnqiSVswvQDzH1vyQGr63OoyAkmJkg0nE-a5-vAUGqFg8nkxE1zrmz_JZ6b9eJNT4zuFmU5ly0JemeEDs8Blf-tZkhHesG9970HYUezbU3TRlm9SB7jWKbjp-tLYyWXkuxMxqjQRdfshGotmA4YDlx-5f1RuJAglBuby
' URL: http://www.plantuml.com/plantuml/uml/nLTVRzis47_tfo3G5nc9Wgx3NepEQE9bGu2iCPoy5SL0IOpCHI85ahAJjSrdtzrHVoWvZjCMMnyIaxpZtV7kVdUdTzPnu-gocDWxgIfkUCdIWbjxwfoHIUt4HQhLjVn7iDUJjSm4IwL92p6P41TRhBMsKkMdgTE6VPemTbJgsef58TExw7x6f7B7xA7vjJDsxNWkfZEsqJ93xee39Sfdx0_3gxLCxPDSJb-3EIgFfaZ3rUHBQmBnakh7tCWC9T6bnq9QTtMxBFY3C23p4hPloSuvKbDH55SROO3Sq1PmGgIAhbmeO9PQpTXLXR-y26_NnWZbGBSJe96NWfP8IWHtCtO6_s4NnsW-cHXDSScpp5iKUIqpHaAVzmYvz5AdCxRKGEoPuypmxLyMub9n9OeNtZhAXLiKWfiLpsHjerkZond3vuFp8TGKhUd8Aq5SHJQAR2kwYycVUYDMN6MwB1vyLgIOAEAzk7TWKLHfQsLIe7Ksr7FCqB7aaSOnnqoxjV17mo1ElSc7qkDCcioRy0botSdq2qkaIT12IyQpNzdFNQIGEvAAlEOT8ksPXdWcMeF75CRmbHLkgOk7A7Wso17cbgU2dWusG3Ba__dJ1uenupmCgbgbwmiLbQ9CCCEMTM43D7dwLUtsCe2Nxfm60Ey45dm13mG7_nYi8xJz6n6-rhi10gZ4bfOVthp-Y7zTFF420IzETN6ZBta2A85bcxRfcXka5aYuqGlTKF5yIapFGNAfxIwuqB9J1v9MUXkbZJTCgx2h9Hsknloe-WKNI6rKzVft6G7cNuLmUcPJ4uUlRRmzo5PTOAOkyET9_5-AM_V3iCyJ2nXCdMzch6zFZmc7Z0rifsGQxOiM_hZ9fAtw9e70pxMY9f04XG7tPLTJ24IrKVqEQQ0Yh0vjahuYwqPLHuKsZgiGqli2DdqoHVkCtAbNm4xoyA0t_mZOm0AEMHGQ4m8OwWIO7bLhS6ARgPKmARH20F6UNW2MaUjZNFaks9NY4e-uoMqRl0yV0tscLhibQC7LXbiVJElLKWdfCEyPeaDk6JOqWR61_Vb63D3iSMw4jOUOLW8SUP3h7ElrGQPxwVRnT7uuLRAaO7M5FwPXJi08L6Y00HpmVfdqoxHVPbob_NH4VM3UrDDJO_W37Szz1INd3hGsFdw-tHmTQZT7E-q6b4crn2IBi2RSo59uauEAJJcuq6LL2ChO7KO4tg11abfVaRufaHUDc_li1R0CveWtGGwwRnaZWebs9NWcp4YXWKC_J5RShLlCJ5i4T19-rmQYT7wV2ceANiheq0TlV5X2fZUO8j4lu872pMjquytQw2s7qZxjBVbDvwCtP3eVEEsdpcd0-tspLpU7VzTqyZVVy1E-TIVxnvG-9t3-e5BKlQ_hhpXO_jAqbovl7y55RLDeKWL4H5JlsqIKQjKm7RFHeFtrquY6Z9RAXfD2KFCBQD9NjmWZRgH567L5lvbzU0B1silGvonKF_XSKlbxiMsxoFyz8mu_HazEFi-3BxCnSTvWndy-nl7SVpVwhOvZFpC4Uve70kvESdz67ts3RnyoOj3qH-HvesVdcDJHnqiSVswvQDzH1vyQGr63OoyAkmJkg0nE-a5-vAUGqFg8nkxE1zrmz_JZ6b9eJNT4zuFmU5ly0JemeEDs8Blf-tZkhHesG9970HYUezbU3TRlm9SB7jWKbjp-tLYyWXkuxMxqjQRdfshGotmA4YDlx-5f1RuJAglBuby
' Generated on: 2025-10-09T19:36:03.720847

@startuml
skinparam classAttributeIconSize 0
hide circle

class ChoosingActor {
  +mouseClick(x: int, y: int, s: Stage): void
  +paint(g: Graphics, s: Stage): void
  +toString(): String
}

class Stage {
  ~grid: Grid
  ~listOfPlayers: List<Actor>
  ~cellOverlay: List<Cell>
  ~playerInAction: Optional<Actor>
  ~currentState: GameState
  ~beat: Beat
  --
  +Stage()
  +addPlayer(player: Actor): void
  +paint(g: Graphics, mouseLoc: Point): void
  -draw_sidepanel(g: Graphics, mouseLoc: Point): void
  +getClearRadius(from: Cell, size: int): List<Cell>
  +mouseClicked(x: int, y: int): void
}

class MoveRandomly {
  +chooseNextLoc(possibleLocs: List<Cell>, currActor: Actor, otherActors: List<Actor>): Cell
  +toString(): String
}

class Bird {
  +{static} birbMoves: int = 3
  --
  +Bird(inLoc: Cell, isBot: boolean)
  #setPoly(): void
}

interface MoveStrategy {
  +chooseNextLoc(possibleLocs: List<Cell>, currActor: Actor, otherActors: List<Actor>): Cell
}

interface Beat {
  ~punchIn(member: Pulse): void
  ~punchOut(member: Pulse): void
  ~ticktock(): void
}

class BotMoving {
  +mouseClick(x: int, y: int, s: Stage): void
  +paint(g: Graphics, s: Stage): void
  +toString(): String
}

class Grid {
  ~cells: Cell = new Cell[20][20]
  --
  +Grid()
  -colToLabel(col: int): char
  -labelToCol(col: char): int
  +paint(g: Graphics, mousePos: Point): void
  +cellAtColRow(c: int, r: int): Optional<Cell>
  +cellAtColRow(c: char, r: int): Optional<Cell>
  +cellAtPoint(p: Point): Optional<Cell>
  +getRadius(from: Cell, size: int): List<Cell>
  +paintOverlay(g: Graphics, cells: List<Cell>, color: Color): void
}

class MoveLeft {
  +chooseNextLoc(possibleLocs: List<Cell>, currActor: Actor, otherActors: List<Actor>): Cell
  +toString(): String
}

abstract class Actor {
  ~baseColor: Color
  ~color: Color
  ~loc: Cell
  ~display: List<Polygon>
  ~bot: boolean
  ~moves: int
  ~turns: int
  ~mover: MoveStrategy
  --
  #Actor(inLoc: Cell, inColor: Color, isBot: boolean, inMoves: int)
  +paint(g: Graphics): void
  #setPoly(): void
  +isBot(): boolean
  +setLocation(inLoc: Cell): void
  +pulsate(phase: char, percentage: int): void
}

class Main {
  -Main()
  +{static} main(args: String[]): void
  +run(): void
}

class Canvas {
  ~stage: Stage
  --
  +Canvas()
  +paint(g: Graphics): void
  +mouseClicked(e: MouseEvent): void
  +mousePressed(e: MouseEvent): void
  +mouseReleased(e: MouseEvent): void
  +mouseEntered(e: MouseEvent): void
  +mouseExited(e: MouseEvent): void
}

class AnimationBeat {
  -started: long
  -a: long
  -b: long
  -c: long
  -dancers: List<Pulse> = new ArrayList<>()
  --
  +AnimationBeat()
  +punchIn(member: Pulse): void
  +punchOut(member: Pulse): void
  +ticktock(): void
  -inPhase(currTime: long): char
  -phaseCompletion(currTime: long): int
}

interface Pulse {
  +pulsate(phase: char, percentage: int): void
}

class Cat {
  +{static} catMoves: int = 2
  --
  +Cat(inLoc: Cell, isBot: boolean)
  #setPoly(): void
}

class StageReader {
  +{static} readStage(path: String): Stage
}

class FormatException {
  +FormatException()
  +FormatException(message: String)
  +FormatException(message: String, cause: Throwable)
}

class Dog {
  +{static} dogMoves: int = 1
  --
  +Dog(inLoc: Cell, isBot: boolean)
  #setPoly(): void
}

interface GameState {
  +mouseClick(x: int, y: int, s: Stage): void
  +paint(g: java.awt.Graphics, s: Stage): void
}

class Cell {
  ~{static} size: int = 35
  ~col: char
  ~row: int
  --
  +Cell(inCol: char, inRow: int, x: int, y: int)
  +paint(g: Graphics, mousePos: Point): void
  +contains(p: Point): boolean
  +leftOfComparison(c: Cell): int
  +aboveComparison(c: Cell): int
}

class SelectingNewLocation {
  +mouseClick(x: int, y: int, s: Stage): void
  +paint(g: Graphics, s: Stage): void
  +toString(): String
}

ChoosingActor ..|> GameState
ChoosingActor ..> Stage
Stage --> Grid
Stage o-- Actor
Stage o-- Cell
Stage --> GameState
Stage --> Beat
MoveRandomly ..|> MoveStrategy
MoveRandomly ..> Actor
MoveRandomly ..> Cell
Bird --|> Actor
Bird ..> Cell
MoveStrategy ..> Actor
MoveStrategy ..> Cell
Beat ..> Pulse
BotMoving ..|> GameState
BotMoving ..> Stage
Grid o-- Cell
MoveLeft ..|> MoveStrategy
MoveLeft ..> Actor
MoveLeft ..> Cell
Actor ..|> Pulse
Actor --> Cell
Actor --> MoveStrategy
Canvas --> Stage
AnimationBeat ..|> Beat
AnimationBeat o-- Pulse
Cat --|> Actor
Cat ..> Cell
StageReader ..> Stage
Dog --|> Actor
Dog ..> Cell
GameState ..> Stage
Cell ..> Cell
SelectingNewLocation ..|> GameState
SelectingNewLocation ..> Stage
@enduml